--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -83,11 +83,12 @@ table.affwp_table td a {
     table-layout: fixed;
 }
 
-#preview_image {
+#preview_creative {
     margin: 15px 0;
+    overflow-x: auto;
 }
 
-#preview_image img {
+#preview_creative img {
     height: auto;
     display: block;
     max-width: 100%;
@@ -205,12 +206,6 @@ table.affwp_table td a {
 	top: 2px;
 }
 
-/* MemberPress Admin Tweaks */
-.affwp-memberpress-coupon-field #affwp_user_search_results {
-	left: 1px;
-	top: 22px;
-}
-
 /* Media Queries */
 @media screen and ( max-width: 782px ) {
 	#affwp-affiliates-filter .column-affiliate_id,
@@ -227,7 +222,7 @@ table.affwp_table td a {
 
 @media screen and ( min-width: 1025px ) {
 	#affwp-affiliates-filter .column-actions {
-		width: 20%;
+		width: 30%;
 	}
 }
 
